--- a/src/views/RegisterCyber/components/RegisterForm/RegisterForm.module.css
+++ b/src/views/RegisterCyber/components/RegisterForm/RegisterForm.module.css
@@ -1,7 +1,23 @@
+.main {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #BCBC00;
+}
+.mainContainer {
+    background-color: #FFFF00;
+    padding:4px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .container {
-    width: 40%;
-    height: 60%;
-    background-color: white;
+    background-color:#092B3E;
     border-radius: 20px;
     padding:24px;
     display: flex;
@@ -10,5 +26,16 @@
 }
 
 .title {
-    color: #092B3E;
+    color: #BCBC00;
+}
+
+.formContainer {
+    width: 100%;
+}
+
+.form {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap:24px;
 }
