--- a/src/views/RegisterCyber/components/RegisterForm/RegisterForm.module.css
+++ b/src/views/RegisterCyber/components/RegisterForm/RegisterForm.module.css
@@ -6,7 +6,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #BCBC00;
+    background-image: url(/background.jpg);
+    background-position: center;
+    background-size: 100% 100%;
 }
 .mainContainer {
     background-color: #FFFF00;
@@ -18,6 +20,9 @@
 }
 .container {
     background-color:#092B3E;
+    -webkit-box-shadow: 2px 6px 53px 0px rgba(0,0,0,1);
+    -moz-box-shadow: 2px 6px 53px 0px rgba(0,0,0,1);
+    box-shadow: 2px 10px 53px 3px rgba(0,0,0,1);
     border-radius: 20px;
     padding:24px;
     display: flex;
@@ -26,7 +31,7 @@
 }
 
 .title {
-    color: #BCBC00;
+    color: #FFFF00;
 }
 
 .formContainer {
