--- a/src/components/UI/UploadImage/UploadImages.module.css
+++ b/src/components/UI/UploadImage/UploadImages.module.css
@@ -9,12 +9,13 @@
     border: 2px dashed #BCBC00;
     border-radius: 4px;
     display: flex;
+    text-align: center;
     justify-content: center;
     align-items: center;
     cursor: pointer;
   }
    .uploadBoxError {
-    
+    text-align: center;
     width: 100%;
     height: 200px;
     border: 2px dashed red;
