--- a/src/views/RegisterCyber/components/RegisterForm/RegisterForm.module.css
+++ b/src/views/RegisterCyber/components/RegisterForm/RegisterForm.module.css
@@ -1,16 +1,4 @@
-.main {
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-}
-.mainContainer {
-    background-color: #FFFF00;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
 .container {
     background-color:#092B3E;
     padding:24px;
@@ -37,15 +25,23 @@
 
 @media (min-width: 1200px) {
     .main {
+    min-width: 100%;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     background-image: url(/background.jpg);
     background-position: center;
     background-size: 100% 100%;
+    padding: 48px 0px;
     }
     .mainContainer {
-    padding:4px;
+        background-color: #FFFF00;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding:4px;
     }
 
     .container {
